<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Login">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/sh_bg_header_police_blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="25dp"
            android:text="@string/login_header"
            android:textColor="@color/flesh"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnLogin"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_bg_btn_carmine_pink"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:translationZ="5dp"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="180dp"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_marginStart="-36dp"
                android:background="@drawable/sh_bg_btn_bright_gray"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/gunmetal"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="Email"
                android:maxLength="30"
                android:textColorHint="@color/steel_teal"
                android:background="@drawable/se_bg_edt_steel_teal"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="16dp"
                android:textSize="16sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:endIconDrawable="@drawable/se_ic_eye"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="@drawable/se_bg_edt_steel_teal"
                android:drawableTint="@color/steel_teal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="16dp"
                android:textColorHint="@color/steel_teal"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password"
            android:textColor="@color/carmine_pink"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/sh_bg_btn_gunmetal"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="18dp"
            android:textAllCaps="false"/>
    </LinearLayout>

</FrameLayout>

