<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Registrar">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/sh_bg_header_police_blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="25dp"
            android:text="@string/let_s_get_you_registered"
            android:textColor="@color/flesh"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnLogin"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_bg_btn_bright_gray"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/gunmetal"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="180dp"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_marginStart="-36dp"
                android:background="@drawable/sh_bg_btn_carmine_pink"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:translationZ="5dp"
                android:textStyle="bold"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:maxLength="30"
                android:textColorHint="@color/steel_teal"
                android:background="@drawable/se_bg_edt_steel_teal"
                android:hint="@string/full_name"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="16dp"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="Email"
                android:maxLength="30"
                android:textColorHint="@color/steel_teal"
                android:background="@drawable/se_bg_edt_steel_teal"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="16dp"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:endIconDrawable="@drawable/se_ic_eye"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="@drawable/se_bg_edt_steel_teal"
                android:drawableTint="@color/steel_teal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="16dp"
                android:textColorHint="@color/steel_teal"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:endIconDrawable="@drawable/se_ic_eye"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="@drawable/se_bg_edt_steel_teal"
                android:drawableTint="@color/steel_teal"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingHorizontal="16dp"
                android:textColorHint="@color/steel_teal"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/sh_bg_btn_gunmetal"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/carmine_pink"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/or_register_with"
                android:textColor="@color/Police_blue"
                android:textStyle="bold"/>

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                android:background="@color/carmine_pink"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:background="@drawable/sh_bg_btn_dust_storm"
                android:contentDescription="@string/content_description"
                android:padding="16dp"
                android:src="@drawable/ic_facebook"/>

            <ImageView
                android:id="@+id/ivApple"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/sh_bg_btn_dust_storm"
                android:contentDescription="@string/content_description"
                android:padding="16dp"
                android:src="@drawable/ic_google_plus"/>

            <ImageView
                android:id="@+id/ivGoogle"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="end"
                android:background="@drawable/sh_bg_btn_dust_storm"
                android:contentDescription="@string/content_description"
                android:padding="16dp"
                android:src="@drawable/ic_apple"/>

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:layout_gravity="bottom"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/Police_blue"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_now"
        android:layout_gravity="bottom|center"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/carmine_pink"
        android:textStyle="bold"/>

</FrameLayout>